--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="search_field_placeholder">Encuentra lo que buscabas ...</string>
+    <string name="available_disclaimer">Disponible(s)</string>
+    <string name="information_seller_title">Información sobre el vendedor</string>
+    <string name="unknown_reputation">Desconocido</string>
 </resources>
